Ajustos per a la configuració inicial.

--- a/App.config.Template
+++ b/App.config.Template
@@ -13,14 +13,14 @@
     </providers>
   </entityFramework>
   <appSettings>
-    <add key="FitxerLog" value="C:\Temp\Inversions.log" />
+    <add key="FitxerLog" value="..\..\Temp\Inversions.log" />
     <add key="DirBd" value="%appdata%\JParera\Inversions" />
     <!-- És el directori on està la base de dades: InversionsBD.mdf -->
     <add key="DirBdDebug" value="%LOCALAPPDATA%\JParera\BD" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="InversionsBDContext" connectionString="metadata=res://*/ClassesEntity.InversionsBD.csdl|res://*/ClassesEntity.InversionsBD.ssdl|res://*/ClassesEntity.InversionsBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=D:\Users\joanp\AppData\Local\JParera\BD\InversionsBD.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InversionsBDContext" connectionString="metadata=res://*/ClassesEntity.InversionsBD.csdl|res://*/ClassesEntity.InversionsBD.ssdl|res://*/ClassesEntity.InversionsBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\InversionsBD.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
